# RAG-Knowledge-Base

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/v1/: health.py  router.py  search.py
app/core/: client.py  config.py  exceptions.py  prompts.py  schemas.py
app/data/: loader.py  preprocessor.py
app/documents/: company_handbook.txt  hr_policies.txt  product_docs.txt  technical_specs.txt
app/services/: embeddings.py  rag_service.py  retriever.py  vector_store.py
data/chroma_db/: chroma.sqlite3
